--- a/index.html
+++ b/index.html
@@ -1,62 +1,48 @@
 <!DOCTYPE html>
 <head>
-  <title>jQuery Lite</title>
-  <script type="text/javascript" src="lib/jquery_lite.js" charset="utf-8"></script>
+  <title>ezDom</title>
+  <script type="text/javascript" src="lib/ezdom.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/main.js" charset="utf-8"></script>
   <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
   <link rel="stylesheet" type="text/css" href="./style/main.css">
+  <link rel="stylesheet" type="text/css" href="./style/parser.css">
 </head>
 <body>
   <section class="page-wrapper">
-    <sidebar class="page-nav">
-      <ul class="repo-list"></ul>
-    </sidebar>
-    <article class="page-content">
-      <pre class="prettyprint">
-        $l(() => {
-          $l.ajax({
-            url: "https://api.github.com/users/maxih/repos",
-            success: (repos) => handleRepos(repos)
-          })
+    <header class="introduction">
+      <h1><a href="https://github.com/Maxih/ezDOM">ezDOM</a></h1>
+      <h2>DOM manipulation made easy.<h2>
+      <p>
+        ezDOM provides a simple interface for making ajax requests and manipulating DOM elements.
+        The example below demonstrates how to make an AJAX call and display it in an unordered list in under 20 lines.
+      </p>
+    </header>
+    <section class="page">
+      <sidebar class="page-nav">
+        <ul class="repo-list"></ul>
+      </sidebar>
+      <article class="page-content">
 
-          function handleRepos(repos) {
-            repos = JSON.parse(repos);
-            repos.forEach((repo) => {
-              const newListItem = $l("&lt;li&gt;");
-              const newListLink = $l("&lt;a&gt;").attr("href", repo.html_url).html(repo.name);
-              const langIcon = languageToElement(repo.language);
-              $l(".repo-list").append(newListItem.append(langIcon).append(newListLink));
-            });
+      <pre class="prettyprint lang-js linenums">
+$ez(() => {
+  $ez.ajax({
+    url: "https://api.github.com/users/maxih/repos",
+    success: (repos) => handleRepos(repos)
+  })
 
-          }
-
-          function languageToElement(lang) {
-            const i = $l("&lt;i&gt;");
-            switch(lang) {
-              case 'Ruby':
-                i.addClass("devicon-ruby-plain");
-                return i;
-              case 'JavaScript':
-                i.addClass("devicon-javascript-plain");
-                return i;
-              case 'C#':
-                i.addClass("devicon-csharp-plain");
-                return i;
-              case 'PHP':
-                i.addClass("devicon-php-plain");
-                return i;
-              case 'HTML':
-                i.addClass("devicon-html5-plain");
-                return i;
-              default:
-                return "";
-            }
-          }
-        });
-
-      </pre>
-    </article>
+  function handleRepos(repos) {
+    repos = JSON.parse(repos);
+    repos.forEach((repo) => {
+      const newListItem = $ez("&lt;li&gt;");
+      const newListLink = $ez("&lt;a&gt;").attr("href", repo.html_url).html(repo.name);
+      const langIcon = languageToElement(repo.language);
+      $ez(".repo-list").append(newListItem.append(langIcon).append(newListLink));
+    });
+  }
+});</pre>
+      </article>
+    </section>
   </section>
 </body>
 </html>
